# PersoAdmin

./: .gitignore  CMakeLists.txt  PersoAdmin.pro  README.md  main.cpp
Database/: abstract_sql_database.cpp  abstract_sql_database.h  abstract_sql_table.cpp  abstract_sql_table.h  database_controller.cpp  database_controller.h  database_query_table.cpp  database_query_table.h  database_response.cpp  database_response.h  database_table_model.cpp  database_table_model.h  i_sql_database.cpp  i_sql_database.h  postgre_sql_database.cpp  postgre_sql_database.h  postgre_sql_table.cpp  postgre_sql_table.h  postgres_controller.cpp  postgres_controller.h  postre_sql_database.cpp  postre_sql_database.h  sql_insert_values.cpp  sql_insert_values.h  sql_query_values.cpp  sql_query_values.h  sql_record_creation_form.cpp  sql_record_creation_form.h  sql_response_model.cpp  sql_response_model.h  sql_table.cpp  sql_table.h
Doc/: .$uml.drawio.bkp  .$uml_temp.drawio.bkp  uml.drawio  uml.xml
GUI/: abstract_gui.cpp  abstract_gui.h  abstract_input_dialog.cpp  abstract_input_dialog.h  abstract_progress_indicator.cpp  authorization_gui.cpp  authorization_gui.h  custom_input_dialog.cpp  custom_input_dialog.h  gui.cpp  gui.h  gui_authorization.cpp  gui_authorization.h  gui_delegates.cpp  gui_delegates.h  gui_kernel.cpp  gui_kernel.h  gui_master.cpp  gui_master.h  identifier_input_dialog.cpp  idetifier_input_dialog.h  input_dialog.cpp  input_dialog.h  interaction_system.cpp  interaction_system.h  main_window_kernel.cpp  main_window_kernel.h  mainwindow_gui.cpp  mainwindow_gui.h  mainwindow_kernel.cpp  mainwindow_kernel.h  order_creation_dialog.cpp  order_creation_dialog.h  order_creation_menu.cpp  order_creation_menu.h  pallet_shiping_dialog.cpp  pallet_shiping_dialog.h  pan_input_dialog.cpp  pan_input_dialog.h  production_line_creation_dialog.cpp  (+11 more)
GUI/Dialogs/: abstract_input_dialog.cpp  abstract_input_dialog.h  authorization_dialog.cpp  authorization_dialog.h  confirm_transponder_rerelease_input_dialog.cpp  confirm_transponder_rerelease_input_dialog.h  identifier_input_dialog.cpp  idetifier_input_dialog.h  link_issuer_key_dialog.cpp  link_issuer_key_dialog.h  manual_release_refund_dialog.cpp  manual_release_refund_dialog.h  order_creation_dialog.cpp  order_creation_dialog.h  pallet_shiping_dialog.cpp  pallet_shiping_dialog.h  pan_input_dialog.cpp  pan_input_dialog.h  production_line_creation_dialog.cpp  production_line_creation_dialog.h  settings_dialog.cpp  settings_dialog.h  start_production_line_dialog.cpp  start_production_line_dialog.h  string_input_dialog.cpp  string_input_dialog.h  transponder_sticker_scan_dialog.cpp  transponder_sticker_scan_dialog.h
GUI/Reactions/: abstract_progress_indicator.h  abstract_return_status_handler.cpp  abstract_return_status_handler.h  gui_return_status_handler.cpp  gui_return_status_handler.h  measuring_progress_indicator.cpp  measuring_progress_indicator.h  progress_indicator.cpp  progress_indicator_link.cpp  progress_indicator_link.h  return_status_handler.cpp  return_status_handler.h  status_indicator_link.cpp  status_indicator_link.h
GUI/Subkernels/: abstract_gui_subkernel.cpp  abstract_gui_subkernel.h  abstract_manager_signal_handler.cpp  abstract_manager_signal_handler.h  assembly_unit_gui_subkernel.cpp  assembly_unit_gui_subkernel.h  database_gui_subkernel.cpp  database_gui_subkernel.h  order_gui_subkernel.cpp  order_gui_subkernel.h  perso_server_gui_subkernel.cpp  perso_server_gui_subkernel.h  production_gui_subkernel.cpp  production_gui_subkernel.h  production_line_gui_subkernel.cpp  production_line_gui_subkernel.h  programmer_gui_subkernel.cpp  programmer_gui_subkernel.h  response_ready_connection.cpp  response_ready_connection.h  server_connection_gui_subkernel.cpp  server_connection_gui_subkernel.h  server_gui_subkernel.cpp  server_gui_subkernel.h  sticker_printer_gui_subkernel.cpp  sticker_printer_gui_subkernel.h
GUI/Widgets/: database_user_interface.cpp  database_user_interface.h  order_user_interface.cpp  order_user_interface.h  perso_server_user_interface.cpp  perso_server_user_interface.h  production_line_user_interface.cpp  production_line_user_interface.h  server_user_interface.cpp  server_user_interface.h  sticker_printer_user_interface.cpp  sticker_printer_user_interface.h
General/: configurable_object.cpp  configurable_object.h  definitions.h  global_environment.cpp  hash_model.cpp  hash_model.h  hash_table_model.cpp  hash_table_model.h  pobject.cpp  pobject.h  psobject.cpp  psobject.h  types.h
Log/: file_log_backend.cpp  file_log_backend.h  log_backend.cpp  log_backend.h  log_system.cpp  log_system.h  widget_log_backend.cpp  widget_log_backend.h
Management/: abstract_manager.cpp  abstract_manager.h  admin_manager.cpp  admin_manager.h  administration_system.cpp  administration_system.h  database_manager.cpp  database_manager.h  global_environment.cpp  order_manager.cpp  order_manager.h  perso_client.cpp  perso_client.h  perso_server_manager.cpp  perso_server_manager.h  production_line_manager.cpp  production_line_manager.h  production_manager.cpp  production_manager.h  programmer_manager.cpp  programmer_manager.h  sticker_printer_manager.cpp  sticker_printer_manager.h
Management/AsyncWrappers/: abstract_async_wrapper.cpp  abstract_async_wrapper.h  assembly_unit_manager_async_wrapper.cpp  assembly_unit_manager_async_wrapper.h  (+18 more)
ServerConnection/: abstract_server_connection.cpp  abstract_server_connection.h  i_server_connection.h  perso_server_connection.cpp  perso_server_connection.h  server_disconnected_signal.cpp  server_disconnected_signal.h
Service/: abstract_service_space.cpp  abstract_service_space.h  asynchronous_object_space.cpp  asynchronous_object_space.h  configuration_manager.cpp  configuration_manager.h  i_service_object_space.cpp  i_service_object_space.h  internal_service_space.cpp  internal_service_space.h  service_object_space.cpp  service_object_space.h
StickerPrinter/: abstract_sticker_printer.cpp  abstract_sticker_printer.h  i_sticker_printer.h  isticker_printer.h  te310_printer.cpp  te310_printer.h
(+95 files in other folders)
